[package]
name = "aad-join-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aad_join_info"
path = "src/lib.rs"

[[bin]]
name = "aad-join-info"
path = "src/main.rs"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security_Cryptography"
]