[package]
name = "aad-join-info"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Create "v0.1.x" git tag.
authors = ["Jonathan Merriweather <Jono@live.com>"]
categories = ["system", "windows", "azure", "active directory"]
edition = "2021"
homepage = "https://github.com/jmerriweather/aad-join-info"
description = """
This rust crate enables someone to get the Azure Active Directory information for a Windows computer. 
"""
documentation = "https://docs.rs/aad-join-info/0.1.0"
keywords = ["aad", "ad", "azure", "active", "directory", "windows", "info"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmerriweather/aad-join-info"
version = "0.1.0"

[lib]
name = "aad_join_info"
path = "src/lib.rs"

[[bin]]
name = "aad-join-info"
path = "src/main.rs"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security_Cryptography"
]